tests/negative/owned_on_non_resource_type.glyph
module neg

fn use_it() -> void {
  let owned x: number = 5
  return void
}
